# advent-of-code

./: .gitignore  Cargo.toml  README.md  check-doc-conventions.py  check-doc-conventions.sh  issue.txt  list.org  moves.txt
aoc_derive/: Cargo.toml
aoc_derive/src/: lib.rs
input/2016/: day_08.txt  day_10.txt
input/2020/: day_09.txt  day_19.txt
input/2021/: day_24.txt
input/2022/: day_15.txt
notes/: 2021-24-monad-template.txt  Makefile  macros.tex  notes.tex
src/: aoc.rs  aoc_2015.rs  aoc_2020.rs  aoc_2021.rs  main.rs
src/aoc/: char_grid.rs  circular_list.rs  evolver.rs  game_solver.rs  grid.rs  iter.rs  lib.rs  mod.rs  parse.rs  tree_search.rs
src/aoc_2015/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.py  day_24.rs  day_25.py  day_25.rs  mod.rs
src/aoc_2016/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  mod.rs
src/aoc_2020/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  mod.rs
src/aoc_2021/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.py  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.py  day_24.rs  day_25.rs  mod.rs
src/aoc_2022/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  mod.rs
