[package]
authors = ["Dan Whitman <dwhitman44@gmail.com>"]
edition = "2021"
name = "advent-of-code"
version = "0.1.0"

[lib]
name = "aoc"
path = "src/aoc/lib.rs"

[[bin]]
name = "advent-of-code"
path = "src/main.rs"

# This enables flamegraph to work on release builds
[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Would like to use this to get better nom parsing errors but it doesn't
# implement Clone on its ErrorTree so I can't (and I can't implement
# a foreign trait on a foreign struct).
#nom-supreme = "0.4.4"
anyhow = "1.0"
bare_metal_modulo = "1.2"
bimap = "0.6"
bitbuffer = "0.11"
circular-buffer = "0.1"
clap = {version = "4.5", features = ["derive", "string"]}
colored = "2.1"
derive-new = "0.6"
derive_more = "0.99"
enum-as-inner = "0.6"
enum-map = "2.7"
enum_dispatch = "0.3"
euclid = "0.22"
gat-lending-iterator = "0.1"
gcollections = "1.5"
hex = "0.4"
indexmap = "2.2"
infinitable = "1.6"
intervallum = "1.4"
# TODO: The latest is 1.13 but we cannot upgrade due to a bug in `strum` that is not yet merged.
# See: https://github.com/Peternator7/strum/pull/357
itertools = "0.12"
lazy_static = "1.4"
maplit = "1.0"
md5 = "0.7"
multiset = "0.0.5"
nom = "7.1"
num = "0.4"
petgraph = "0.6"
serde_json = "1.0"
strum = {version = "0.26", features = ["derive"]}
takeable = "0.2"
thiserror = "1.0"

[features]
expensive = []

# NOTE: This is normally flagged as unused because the crate is imported as `interval`.
[package.metadata.cargo-machete]
ignored = ["intervallum"]
