[package]
authors = ["Dan Whitman <dwhitman44@gmail.com>"]
edition = "2024"
name = "advent-of-code"
version = "0.1.0"

[lib]
name = "aoc"
path = "src/aoc/lib.rs"

[[bin]]
name = "advent-of-code"
path = "src/main.rs"

# This enables flamegraph to work on release builds
[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Would like to use this to get better nom parsing errors but it doesn't
# implement Clone on its ErrorTree so I can't (and I can't implement
# a foreign trait on a foreign struct).
#nom-supreme = "0.4.4"
anyhow = "1.0"
bare_metal_modulo = "1.2"
bimap = "0.6"
bitbuffer = "0.11"
bool_ext = "0.7.0"
circular-buffer = "1.2"
clap = {version = "4.5", features = ["derive", "string"]}
colored = "3.1"
derive-new = "0.7"
derive_more = {version = "2.1", features = ["full"]}
either = "1.15.0"
enum-as-inner = "0.7"
enum-map = "2.7"
enum_dispatch = "0.3"
euclid = "0.22"
gat-lending-iterator = "0.1"
gcollections = "1.5"
grid = "1.0"
hex = "0.4"
indexmap = "2.13"
infinitable = "1.6"
intervallum = "1.4"
itertools = "0.14"
lazy_static = "1.5"
maplit = "1.0"
md5 = "0.8"
multiset = "0.0.5"
nom = "8.0"
nom-language = "0.1.0"
num = "0.4"
num-integer = "0.1"
petgraph = "0.8"
serde_json = "1.0"
strum = {version = "0.27", features = ["derive"]}
takeable = "0.2"
thiserror = "2.0"

[features]
expensive = []

# NOTE: This is normally flagged as unused because the crate is imported as `interval`.
[package.metadata.cargo-machete]
ignored = ["intervallum"]
